<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black">
        <ImageView
            android:id="@+id/disp_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/photo" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_parent_rounded_corner"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/prof_email" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:text="@string/prof_email"
            android:id="@+id/profile_email"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_parent_rounded_corner"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/prof_name" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:text="@string/prof_email"
            android:id="@+id/profile_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_parent_rounded_corner"
        android:layout_weight="1"
        android:id="@+id/mobile_layout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/prof_mobile" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:text="@string/prof_email"
            android:id="@+id/profile_mobile"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_parent_rounded_corner"
        android:id="@+id/password_layout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/prof_pass" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:text="@string/prof_email"
            android:id="@+id/profile_pass"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_parent_rounded_corner"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/prof_college" />
        <TextView
            android:id="@+id/profile_college"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/prof_college_name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_parent_rounded_corner"
        android:id="@+id/update_profile">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="Update Profile"
            android:background="@color/iron"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>