<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/options"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fadeScrollbars="true"
    android:layout_marginTop="10dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/cover_picture"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:background="@color/black"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/other_disp_profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/photo" />



        </RelativeLayout>
        <LinearLayout
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_parent_rounded_corner"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/prof_email" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:paddingLeft="20dp"
                    android:text="@string/prof_email"
                    android:id="@+id/other_profile_email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_parent_rounded_corner"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/prof_name" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:paddingLeft="20dp"
                    android:text="@string/prof_email"
                    android:id="@+id/other_profile_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_parent_rounded_corner"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:id="@+id/other_mobile_layout">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/prof_mobile" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black"
                    android:text="@string/prof_email"
                    android:id="@+id/other_profile_mobile"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_parent_rounded_corner">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/prof_college"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/profile_college"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="@string/prof_college_name"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>